# tastemaker-programs

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/: ISSUE_UPDATES.md
.github/ISSUE_TEMPLATE/: config.yml  good_first_issue.md  help_wanted.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CI_AGENT_PLAYBOOK.md  DEPLOY_DEVNET.md  ESCROW_FLOW.md  GIT_SIGNING_RULES.md  GOVERNANCE_FLOW.md  PROGRAM_UPDATE_NOTES_2026-02-12.md  RWA_PATTERNS.md
idl/: governance.json  otc_market.json  project_escrow.json  revenue_distribution.json  rwa_token.json  taste_token.json
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/otc_market/: Cargo.toml
programs/otc_market/src/: lib.rs
programs/project_escrow/: Cargo.toml
programs/project_escrow/src/: lib.rs
programs/revenue_distribution/: Cargo.toml
programs/revenue_distribution/src/: lib.rs
programs/rwa_token/: Cargo.toml
programs/rwa_token/src/: lib.rs
programs/rwa_transfer_hook/: Cargo.toml
programs/rwa_transfer_hook/src/: entrypoint.rs  lib.rs  processor.rs
programs/taste_token/: Cargo.toml
programs/taste_token/src/: lib.rs
public_docs/: CI_DEBUG_GUIDE.md  DEPLOY_DEVNET.md  DOCS_VISIBILITY_RULES.md  OTC_MARKETPLACE.md  README.md
scripts/: add-taste-metadata.ts  backfill-vote-weight-pdas.ts  deploy-devnet.sh  fix-solana-cache-permissions.sh  force-complete-project.ts  init-escrow-config.ts  init-governance-config.ts  init-rwa-config.ts  init-taste-mint.ts  initialize-rwa-metadata.ts  initialize-rwa-mint.ts  patch-governance-idl.cjs  run-mocha.sh  run-test-full.sh  run-test-grep.sh
tests/: README.md  exhaustive.ts  integration.ts  otc_market.ts
