[workspace]
members = [
    "programs/taste_token",
    "programs/project_escrow",
    "programs/governance",
    "programs/rwa_token",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
