[package]
name = "otc_market"
version = "0.1.0"
description = "TasteMaker OTC marketplace: on-chain offers for IOU/RWA, priced in $TASTE (Token-2022 only)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otc_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
devnet = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token", "associated_token"] }
