[package]
name = "project_escrow"
version = "0.1.0"
description = "TasteMaker project funding escrow with milestone-based release"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "project_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
devnet = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
  anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
mpl-token-metadata = "5.1"
