[package]
name = "revenue_distribution"
version = "0.1.0"
description = "TasteMaker RWA revenue distribution: artist deposits, holders claim proportional share"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "revenue_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
devnet = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
  anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
project_escrow = { path = "../project_escrow", features = ["cpi"] }
rwa_token = { path = "../rwa_token", features = ["cpi"] }
