[package]
name = "rwa_transfer_hook"
version = "0.1.0"
description = "TasteMaker RWA pass-through transfer hook; upgradeable for future compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
default = []
test = []
devnet = []
idl-build = []

[dependencies]
solana-account-info = "2.0"
solana-cpi = "2.0"
solana-msg = "2.0"
solana-program = "2.0"
solana-program-error = "2.0"
solana-pubkey = "2.0"
solana-system-interface = "1.0"
spl-token-2022 = { version = "8.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
