[package]
name = "taste_token"
version = "0.1.0"
description = "TasteMaker $TASTE platform token (Token-2022, 9 decimals)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "taste_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
devnet = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = { version = "0.32.0", features = ["token", "associated_token"] }
spl-token = "8.0"
